# nix-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  GEMINI.md  PERFORMANCE.md  README.md  SECURITY.md  deny.toml  flake.nix  goose-mcp-custom-extensions.md  mcp-sampling.md  recipes.md  subagents.md
.claude/: settings.local.json
.github/workflows/: ci.yml
nix/: module.nix
proptest-regressions/common/security/: input_validation.txt
src/: lib.rs  main.rs
src/clan/: analysis.rs  backups.rs  machines.rs  mod.rs  types.rs
src/common/: cache.rs  cache_registry.rs  caching.rs  command.rs  counter.rs  mod.rs  nix_server.rs  nix_tools_helpers.rs  tool_module.rs  tool_registry.rs
src/common/security/: audit.rs  helpers.rs  input_validation.rs  mod.rs
src/dev/: mod.rs  precommit.rs  types.rs
src/nix/: build.rs  develop.rs  flakes.rs  info.rs  mod.rs  packages.rs  quality.rs  types.rs
src/process/: mod.rs  pexpect.rs  pueue.rs  types.rs
src/prompts/: mod.rs  nix_prompts.rs  types.rs
templates/clan-basic/: README.md  flake.nix
templates/clan-infrastructure/: README.md  flake.nix
tests/: error_handling.rs  nix_tools_integration.rs
