[package]
name = "mcp-nix-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for Nix package management and development assistance"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7" }
rmcp = { version = "0.10.0", features = ["transport-io"] }

[dev-dependencies]
tokio-util = { version = "0.7", features = ["io"] }

[features]
default = ["transport-io"]
transport-io = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("transport-io", "server-side-http"))'] }
