[package]
name = "onix-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Nix package management and development assistance"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7" }
once_cell = "1.19"
regex = "1.10"
rmcp = { version = "0.10.0", features = ["transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-util = { version = "0.7", features = ["io"] }

[features]
default = ["transport-io"]
transport-io = []

[profile.release]
# Enable Link-Time Optimization for better performance
lto = true
# Use a single codegen unit for maximum optimization
codegen-units = 1
# Strip debug symbols to reduce binary size
strip = true
# Maximum optimization level
opt-level = 3

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(feature, values("transport-io", "server-side-http"))',
] }
